web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - image: nginx:alpine
        name: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /etc/nginx/conf.d/default.conf
          name: nginx-config
          subPath: nginx.conf
        - mountPath: /usr/share/nginx/html
          name: web-content
      volumes:
      - configMap:
          name: nginx-config
        name: nginx-config
      - name: web-content
        persistentVolumeClaim:
          claimName: web-content-pvc
