web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: web-svc
            port:
              number: 80
        path: /web
        pathType: Exact
  tls:
  - secretName: web-tls
